nix-compat-derive-tests/tests/ui/parse_mising_version.stderr
error: expected `=`
 --> tests/ui/parse_mising_version.rs:5:18
  |
5 |     #[nix(version)]
  |                  ^
