nix-compat-derive-tests/tests/ui/parse_mising_version.rs
use nix_compat_derive::NixDeserialize;

#[derive(NixDeserialize)]
pub struct Test {
    #[nix(version)]
    version: u8,
}

fn main() {}
